@@ -1,5 +1,9 @@
 2025-09-24  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el (help-fns-edit-variable, list-timers): Enable commands.
+
+2025-09-24  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (dotemacs-theme-refresh): Use modus-themes-with-colors.
 
 2025-09-24  Zhengyi Fu  <i@fuzy.me>
